fixed spacing issued in edit view for images/videos. lookin' sharp now

--- a/v2/app/assets/stylesheets/_custom.sass
+++ b/v2/app/assets/stylesheets/_custom.sass
@@ -58,6 +58,10 @@ textarea
   background-color: rgba(0, 0, 0, 0.3)
   border-right: 0px solid #FFF
   
+// thumbnail text input size (kinda hacky fix  -GREG)
+input.thumbnail-text-input
+  width: 80%
+  
 /* typography */
 
 h1, h2, h3, h4, h5, h6
